src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  * {
    @apply no-scrollbar text-base;
  }

  pre {
    @apply my-2 inline-table w-full max-w-full;
  }

  li {
    @apply my-1;
  }

  ol {
    @apply list-inside list-decimal !px-2;
  }

  input,
  textarea {
    @apply placeholder:opacity-100 focus:!outline-none;
  }

  .modal {
    @apply modal-bottom !p-2 lg:modal-top lg:!p-3;
  }

  .prose {
    @apply prose-spacing !max-w-full;

    ul,
    ol,
    li {
      @apply prose-spacing [&>p:first-child]:inline;
    }
  }

  table {
    @apply max-h-96;
  }

  td,
  th {
    @apply whitespace-nowrap p-2 font-medium first-of-type:rounded-l-md last-of-type:rounded-r-md;
  }

  .modal-box-container {
    @apply !container modal-box mx-auto mt-16 w-full px-1 pb-0 pt-2 shadow-none lg:w-9/12 lg:px-3;
  }

  .modal-box-content {
    @apply relative rounded-md bg-base-100 p-6;
  }

  .link {
    @apply mx-1 underline-offset-2;
  }

  .underline {
    @apply underline-offset-2;
  }

  .btn {
    @apply !shadow-none;
  }

  /* Hide scrollbar for Chrome, Safari and Opera */
  .no-scrollbar::-webkit-scrollbar {
    display: none;
  }

  /* Hide scrollbar for IE, Edge and Firefox */
  .no-scrollbar {
    -ms-overflow-style: none; /* IE and Edge */
    scrollbar-width: none; /* Firefox */
  }

  .pause-animation {
    transition-delay: 500ms;
    animation-play-state: paused;
  }

  .prose-spacing {
    @apply [&>*:first-child]:!mt-0 [&>*:last-child]:!mb-0 [&>*]:!my-[10px];
  }

  input[type='number']::-webkit-outer-spin-button,
  input[type='number']::-webkit-inner-spin-button,
  input[type='number'] {
    -webkit-appearance: none;
    margin: 0;
    -moz-appearance: textfield !important;
  }
}

body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
    'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  max-height: 100dvh;
  height: 100dvh;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
}

.yarl__slide {
  @apply cursor-pointer;
}

.yarl__slide_image,
.yarl__slide_captions_container {
  @apply cursor-default;
}

.yarl__container,
.yarl__slide {
  @apply !bg-black !bg-opacity-35;
}

.yarl__container {
  @apply backdrop-blur-sm;
}

.text-area-wrap {
  position: relative;
  display: grid;
  width: 150px;
  font-size: 14px;
}

.text-area-wrap::after {
  display: block;
  content: attr(data-value) ' ';
  white-space: pre-wrap;
  visibility: hidden;
}

.text-area-wrap textarea {
  resize: none;
  overflow: hidden;
}

.text-area-wrap::after,
.text-area-wrap textarea {
  font: inherit;
  grid-area: 1/1/2/2;
  padding: 2px;
}

